2 February 2022: George
	- Merge PR #532 from Shchelk: Fix: buffer overflow bug.
	- Merge PR #616: Update ratelimit logic. It also introduces
	  ratelimit-backoff and ip-ratelimit-backoff configuration options.

1 February 2022: George
	- Merge PR #603 from fobser: Use OpenSSL 1.1 API to access DSA and RSA
	  internals.

31 January 2022: George
	- Fix review comment for use-after-free when failing to send UDP out.

31 January 2022: Wouter
	- iana portlist update.

29 January 2022: George
	- Fix tls-* and ssl-* documented alternate syntax to also be available
	  through remote-control and unbound-checkconf.
	- Better cleanup on failed DoT/DoH listening socket creation.

26 January 2022: George
	- Fix #599: [FR] RFC 9156 (obsoletes RFC 7816), by noting the new RFC
	  document.

26 January 2022: Wouter
	- Test for NSID in SERVFAIL response due to DNSSEC bogus.

25 January 2022: George
	- Fix #588: Unbound 1.13.2 crashes due to p->pc is NULL in
	  serviced_udp_callback.
	- Merge PR #612: TCP race condition.

25 January 2022: Wouter
	- Fix #610: Undefine-shift in sldns_str2wire_hip_buf.

19 January 2022: George
	- For dnstap, do not wakeupnow right there. Instead zero the timer to
	  force the wakeup callback asap.

14 January 2022: George
	- Merge PR #605:
	  - Fix EDNS to upstream where the same option could be attached
	     more than once.
	  - Add a region to serviced_query for allocations.

14 January 2022: Wouter
	- Add rpz: for-downstream: yesno option, where the RPZ zone is
	  authoritatively answered for, so the RPZ zone contents can be
	  checked with DNS queries directed at the RPZ zone.
	- For #602: Allow the module-config "subnetcache validator cachedb
	  iterator".

11 January 2022: George
	- Fix prematurely terminated TCP queries when a reply has the same ID.

7 January 2022: Wouter
	- Merge #600 from pemensik: Change file mode before changing file
	  owner.

5 January 2022: Wouter
	- Fix for #596: fix that rpz return message is returned and not just